Fix for extra whitespace around small images regression.
See the IPA speaker icon on the Obama article.

The issue was the div added around images to allow side-to-side
scrolling of extra-wide images was happening even on images
which were not wider than the screen.

This patch ensures the scrolling div is only added if needed.

T95738

--- a/www/less/styleoverrides.less
+++ b/www/less/styleoverrides.less
@@ -31,7 +31,7 @@ native header and footer uses the web view width to determine its own width.
 */
 .content_block, .image_overflow_x_container {
     clear:both;
-    overflow-X: auto;
+    overflow-x: auto;
 }
 
 /* Override top padding on first edit pencil so it roughly aligns with first 2 lines of text. */
